# FocusNook

./: .dockerignore  .gitignore  AGENTS.md  LICENSE  README.md
apps/desktop/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/scripts/: android-build-windows.ps1  android-capture-screenshot.ps1  android-keystore-init.ps1  android-release-preflight.ps1  android-verify-artifact.ps1
apps/desktop/src/: App.css  App.test.tsx  App.tsx  theme.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  reminder-alert.json
apps/desktop/src-tauri/icons/: icon.icns  tray-icon.rgba
apps/desktop/src-tauri/src/: alerts.rs  android_vault_key.rs  audio_crypto.rs  blob_crypto.rs  cloud_sync.rs  config.rs  db.rs  diagnostics.rs  lib.rs  notes.rs  oauth.rs  plan_items.rs  profiles.rs  reminders.rs  server_sync.rs  sync.rs  sync_blobs.rs  sync_log.rs  sync_status.rs  sync_tokens.rs  window_state.rs
apps/desktop/src/__snapshots__/: App.test.tsx.snap
apps/desktop/src/components/: CalendarPopover.tsx  DayView.test.tsx  DayView.tsx  EmptyState.tsx  LiveBackground.tsx  NotesView.test.tsx  NotesView.tsx  OverlayHeader.tsx  ProfileSwitcher.test.tsx  ProfileSwitcher.tsx  ReminderAlert.test.tsx  ReminderAlert.tsx  RemindersView.test.tsx  RemindersView.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx  TabBar.tsx  ThemePicker.tsx
apps/desktop/src/shared/: calendarMarks.ts  commands.ts  cursorCoordinates.test.ts  cursorCoordinates.ts  dateKeys.ts  locale-context.ts  locale.tsx  playChime.ts  reminderPresets.test.ts  reminderPresets.ts  theme-context.ts  theme.tsx  themeCatalog.ts  translations.ts  useAudioRecorder.ts  useDesktopCursorPassthrough.ts  useHoldToConfirm.ts  useLayerToggle.ts  useLiveBackgroundPointer.ts  useLocale.ts  useMicrophoneSettings.ts  useNotes.ts  useOutsideClick.ts  usePlanItems.ts  useProfiles.ts  useReminders.ts  useSystemTheme.ts  useTheme.ts
apps/desktop/src/test/: setup.ts
apps/server/: .dockerignore  .env.example  Caddyfile  Cargo.toml  Dockerfile  README.md  compose.vds-nginx.yml  compose.yml
apps/server/migrations/: 202607060001_init.sql  202607070001_admin_monitoring.sql  202607070002_user_accounts.sql  202607160001_privacy_consents.sql
apps/server/nginx/: focusnook.conf
apps/server/scripts/: backup-vds-local.py  deploy-vds.sh  generate-env.sh  predeploy-check.sh  restore-drill.sh  rollback-vds.sh  smoke-test.sh
apps/server/src/: account_auth.rs  admin_web.rs  auth.rs  config.rs  crypto.rs  error.rs  legal.rs  main.rs  routes.rs  state.rs  sync_events.rs
docs/: store-release-checklist.md  sync-attachments.md  v1-release-plan.md
docs/releases/: access-day-runbook.md  android-version-codes.md  release-evidence-template.md
docs/store-listing/: appgallery-en.md  data-safety-and-permissions.md  owner-inputs.md  rustore-ru.md  screenshot-plan.md
plugins/tauri-plugin-google-auth/: Cargo.toml  build.rs
plugins/tauri-plugin-google-auth/android/: build.gradle.kts  proguard-rules.pro  settings.gradle
plugins/tauri-plugin-google-auth/android/src/main/java/com/proanima/googleauth/: GoogleAuthPlugin.kt
plugins/tauri-plugin-google-auth/permissions/autogenerated/: reference.md
plugins/tauri-plugin-google-auth/permissions/autogenerated/commands/: access_token.toml
plugins/tauri-plugin-google-auth/permissions/schemas/: schema.json
plugins/tauri-plugin-google-auth/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
plugins/tauri-plugin-reminder-alarm/: Cargo.toml  README.md  build.rs
plugins/tauri-plugin-reminder-alarm/android/: build.gradle.kts
plugins/tauri-plugin-reminder-alarm/android/src/main/: AndroidManifest.xml
plugins/tauri-plugin-reminder-alarm/android/src/main/java/com/proanima/reminderalarm/: AlarmScheduler.kt  BootReceiver.kt  ReminderAlarmPlugin.kt  ReminderAlarmReceiver.kt
plugins/tauri-plugin-reminder-alarm/permissions/: default.toml
plugins/tauri-plugin-reminder-alarm/permissions/autogenerated/: reference.md
plugins/tauri-plugin-reminder-alarm/permissions/autogenerated/commands/: ensure_notification_permission.toml  request_exact_alarm_permission.toml  schedule_exact_alarm.toml
plugins/tauri-plugin-reminder-alarm/permissions/schemas/: schema.json
plugins/tauri-plugin-reminder-alarm/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
plugins/tauri-plugin-secure-storage/: Cargo.toml  build.rs
plugins/tauri-plugin-secure-storage/android/: build.gradle.kts  proguard-rules.pro
plugins/tauri-plugin-secure-storage/android/src/main/java/com/proanima/securestorage/: KeystoreHelper.kt  SecureStoragePlugin.kt
plugins/tauri-plugin-secure-storage/src/: desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
