[package]
name = "tauri-plugin-secure-storage"
version = "0.1.0"
authors = ["ProAnima Studio"]
description = "Android Keystore-backed small-blob encryption for FocusNook's at-rest vault key."
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-secure-storage"

[dependencies]
tauri = { version = "2.11.3" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.6.3", features = ["build"] }
